@@ -1,3 +1,11 @@
+2008-01-19  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* tests/test-pokertable.py.in (PokerTableTestCase.setUp): Added
+	option to change the settings XML string. 
+	(PokerTableTestCaseWithPredefinedDecks): Created class to test
+	predefined decks.
+	Added settings_stripped_deck_xml variable.
+
 2008-01-14  Loic Dachary <loic@dachary.org>
 
 	* Release 1.3.0
